Basic Frontend Integrated. Separate Sections for Quiz,Chatbot and Home and Auth. Minor Backend modifications

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ node_modules/
 
 # Environment variables file
 .env
+client/.env
+client/.blot
 
 # Ignore virtual environment inside server folder
 server/venv/
