--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,3 +8,11 @@ numpy==1.26.4
 python-dotenv==1.0.1
 requests==2.31.0
 slowapi==0.1.4
+langchain-groq>=0.3.8
+langchain-core>=0.3.76
+langchain-community>=0.3.21
+torch==2.8.0
+transformers==4.56.2
+tokenizers==0.22.1
+safetensors==0.6.2
+huggingface-hub==0.35.1
